changed precission of shaders for mobile

--- a/blob12.html
+++ b/blob12.html
@@ -28,7 +28,9 @@ void main() {
   </script>
 
   <script id="fs" type="notjs">
-precision mediump float;
+//precision mediump float;
+precision highp float;
+
 uniform float time;
 uniform vec2 resolution;
 uniform sampler2D backbuffer;
