--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A collection of animated blobs programmed in glsl using the webgl api. Made by Jose Blanco Perales.">    
   <link rel="icon" href="favicon.ico" type="image/x-icon" />    
   <title>Meta blobs</title>
   <link rel="stylesheet" href="index.css" type="text/css">
