added meta tags

--- a/blob6.html
+++ b/blob6.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Meta blobs - Blob #6. Made by Jose Blanco Perales.">    
+  <meta name="author" content="Jose Blanco Perales">
+  <meta name="keywords" content="creativeCoding, javascript, glsl, motionDesign">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Meta blobs - Blob #6">
+  <meta name="twitter:description" content="Meta blobs - Blob #6. Made by Jose Blanco Perales.">    
+  <meta name="twitter:creator" content="@blancoperales">
+  <meta name="twitter:site" content="@blancoperales">
+  <meta name="twitter:image" content="https://metablobs.joseblancoperales.com/imgs/big/blob6.png">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />      
   <title>Meta blobs - Blob #6</title>
   <link rel="stylesheet" href="blob.css" type="text/css">
