--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A collection of animated blobs programmed in glsl using the webgl api. Made by Jose Blanco Perales.">    
+  <meta name="author" content="Jose Blanco Perales">
+  <meta name="keywords" content="creativeCoding, javascript, glsl, portfolio">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Meta blobs">
+  <meta name="twitter:description" content="A collection of animated blobs programmed in glsl using the webgl api. Made by Jose Blanco Perales.">    
+  <meta name="twitter:creator" content="@blancoperales">
+  <meta name="twitter:site" content="@blancoperales">
+  <meta name="twitter:image" content="https://metablobs.joseblancoperales.com/imgs/big/blob7.png">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />    
   <title>Meta blobs</title>
   <link rel="stylesheet" href="index.css" type="text/css">
